# tantivy

./: Cargo.toml
bitpacker/: Cargo.toml
columnar/: Cargo.toml
columnar/src/: dynamic_column.rs  value.rs
common/: Cargo.toml
common/src/: file_slice.rs  lib.rs  vint.rs
fastfield_codecs/: Cargo.toml
fastfield_codecs/src/: main.rs  serialize.rs
ownedbytes/: Cargo.toml
src/: docset.rs  future_result.rs  lib.rs
src/aggregation/: agg_req_with_accessor.rs  collector.rs  mod.rs  segment_agg_result.rs
src/collector/: custom_score_top_collector.rs  facet_collector.rs  mod.rs  multi_collector.rs  top_collector.rs  top_score_collector.rs  tweak_score_top_collector.rs
src/core/: executor.rs  index.rs  index_meta.rs  inverted_index_reader.rs  searcher.rs  segment.rs  segment_attributes.rs  segment_reader.rs  single_segment_index_writer.rs  tests.rs
src/directory/: composite_file.rs  directory.rs  file_slice.rs  file_watcher.rs  footer.rs  managed_directory.rs  mmap_directory.rs  ram_directory.rs  tests.rs
src/fastfield/: mod.rs  readers.rs
src/fieldnorm/: reader.rs
src/indexer/: delete_queue.rs  index_writer.rs  index_writer_status.rs  log_merge_policy.rs  merger.rs  mod.rs  operation.rs  segment_updater.rs
src/postings/: block_segment_postings.rs  mod.rs  segment_postings.rs  serializer.rs  term_info.rs
src/query/: all_query.rs  automaton_weight.rs  bm25.rs  exclude.rs  (+13 more)
sstable/: Cargo.toml
sstable/src/: delta.rs  dictionary.rs  lib.rs  sstable_index.rs  streamer.rs
sstable/src/value/: index.rs
stacker/: Cargo.toml
tokenizer-api/: Cargo.toml
(+35 files in other folders)
