[package]
name = "tantivy-sstable"
description = "sstable implementation"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = {path="../common", package="tantivy-common", version="0.5"}
ciborium = "0.2"
serde = "1"
tantivy-fst = "0.4"

[dev-dependencies]
proptest = "1"
criterion = "0.4"
names = "0.14"
rand = "0.8"

[[bench]]
name = "stream_bench"
harness = false
