[package]
name = "summavy-tokenizer-api"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "Tokenizer API of summavy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
